src/test/ui/impl-trait/universal-two-impl-traits.stderr
error[E0308]: mismatched types
  --> $DIR/universal-two-impl-traits.rs:5:9
   |
LL |     a = y;
   |         ^ expected type parameter, found a different type parameter
   |
   = note: expected type `impl Debug` (type parameter)
              found type `impl Debug` (type parameter)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
